--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 # numtide/devshell
 .data
 
-# direnv/direnv
-.direnv
+# direnv/direnv + divnix/std
+.std
 .envrc.local
 
 # hashicorp/terraform
@@ -20,3 +20,4 @@ result*
 
 # misc
 *.swp
+/.direnv
