--- a/.envrc
+++ b/.envrc
@@ -7,4 +7,4 @@ DEVSHELL_TARGET=${DEVSHELL_TARGET:-dev}
 source_url \
     "https://raw.githubusercontent.com/divnix/std/main/direnv_lib.sh" \
       "sha256-JkRxy5PilGkOQcI/KaiZeyJKUTMTKduQwsw/ayUyz4k="
-use std cells "//automation/devshells:${DEVSHELL_TARGET}"
+use std nix "//automation/devshells:${DEVSHELL_TARGET}"
