--- a/.envrc
+++ b/.envrc
@@ -4,7 +4,6 @@
 [ -f .envrc.local ] && source_env .envrc.local
 DEVSHELL_TARGET=${DEVSHELL_TARGET:-dev}
 
-source_url \
-    "https://raw.githubusercontent.com/divnix/std/main/direnv_lib.sh" \
-      "sha256-JkRxy5PilGkOQcI/KaiZeyJKUTMTKduQwsw/ayUyz4k="
+#shellcheck disable=SC1090
+. "$(nix eval .#__std.direnv_lib)"
 use std nix "//automation/devshells:${DEVSHELL_TARGET}"
