imp: switch to awsExt infraType and add equinix machine

--- a/.envrc
+++ b/.envrc
@@ -4,6 +4,10 @@
 [ -f .envrc.local ] && source_env .envrc.local
 DEVSHELL_TARGET=${DEVSHELL_TARGET:-dev}
 
+# Equinix deployment key
+source_env_if_exists secrets/equinix-secret.sh
+env_vars_required METAL_AUTH_TOKEN
+
 #shellcheck disable=SC1090
 . "$(nix eval .#__std.direnv_lib)"
 use std nix "//automation/devshells:${DEVSHELL_TARGET}"
